@@ -24,6 +24,7 @@ requires 'DateTime' => 0;
 requires 'English' => 0;
 requires 'Error::Pure' => 0;
 requires 'MARC::Convert::Wikidata::Object' => 0;
+requires 'MARC::Leader' => 0;
 requires 'Readonly' => 0;
 requires 'Roman' => 0;
 requires 'Unicode::UTF8' => 0;
