@@ -1,4 +1,5 @@
 0.06
+ - Rewrite to use of MARC::Leader.
 
 0.05 2023-11-11T22:02:39+01:00
  - Add Přelouč to publishing places cleanup.
